[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Player-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/spot.png" type="Texture" id=4]
[ext_resource path="res://Objects/aim_line.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.01399
height = 3.64005

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.90368
height = 4.46817

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 12 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 13 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 14 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 15 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 5 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 8 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 9, 11 ]
}

[sub_resource type="OccluderPolygon2D" id=11]
cull_mode = 2
polygon = PoolVector2Array( -2.60784, -6.37623, -4.39165, -5.03837, -4.68895, 2.39417, -2.75649, 5.21854, 2.29764, 5.06989, 4.37875, 2.54282, 4.08145, -5.33568, 1.85168, -6.52488 )

[node name="Player" type="KinematicBody2D"]
show_behind_parent = true
light_mask = 4
z_index = 1
collision_layer = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/IdleUp = SubResource( 6 )
anims/WalkingDown = SubResource( 7 )
anims/WalkingLeft = SubResource( 8 )
anims/WalkingRight = SubResource( 9 )
anims/WalkingUp = SubResource( 10 )

[node name="aim_line" parent="." instance=ExtResource( 5 )]
z_index = -1
width = 0.5

[node name="knockback_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 4
occluder = SubResource( 11 )
light_mask = 4

[node name="Gun_controller" type="Node2D" parent="."]

[node name="reload_timer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
range_item_cull_mask = 5
shadow_enabled = true
shadow_item_cull_mask = 3
[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
